# codessa-platform

./: .gitignore  .gitmodules  CI_CD_SETUP_GUIDE.md  DEPENDENCY_MAPPING.md  IMPLEMENTATION_SUMMARY.md  MODULAR_ARCHITECTURE_DESIGN.md  MODULAR_ARCHITECTURE_PLAN.md  PROJECT_STRUCTURE_GUIDE.md  REPOSITORY_SEPARATION_STRATEGY.md  ai-project-setup-guide.md  analyze-projects.ps1  setup-cloud-vm.sh  setup-modular-architecture.ps1
Codessa OS/: README.md  cognitive-os-prototype.tsx
aetherion-soulforge/: Dockerfile  IMPROVEMENTS.md  MONITORING_SETUP.md  NEW_FEATURES.md  README.md  UPGRADE_COMPLETE.md  config.yaml  docker-compose.monitoring.yml  docker-compose.yml  requirements.txt  routing.yaml  run_server.py  setup.sh
codessa-core/: README.md
codessa-llm-router/: README.md  ai_native_platform_impl.md  (+15 more)
multi-agent-factory/: .pre-commit-config.yaml  CODEOWNERS  PROJECT_BACKLOG.md  additional_agents.py  defect_template.yml  enhanced_docker_agents.txt  maf_bootstrap.sh  maf_repo_audit.md  make.ps1  project_review  pyproject.toml  requirements-dev.txt  requirements.txt
multi-agent-factory/.github/workflows/: backlog-management.yml  docker-publish.yml
multi-agent-factory/.trae/rules/: project_rules.md
multi-agent-factory/agents/: requirements.txt
multi-agent-factory/agents/base_agent/: base_agent.py
multi-agent-factory/agents/doc_writer/: agent.py  requirements.txt
multi-agent-factory/alembic/: env.py
multi-agent-factory/api/: auth.py  database.py  health.py
multi-agent-factory/config/: message_schemas.yaml  models.schema.json  rbac.py  settings.py
multi-agent-factory/config/schemas/: __init__.py  envelope.py  nats_config.py  security.py  status_message.py  task_message.py  validation_v2.py
multi-agent-factory/docs/: AGENT_INTEGRATION.md  ARCHITECTURE.md  MESSAGE_CONTRACTS_v2.md
multi-agent-factory/docs/api/: openapi-spec.yaml
multi-agent-factory/docs/runbooks/: OPERATIONS.md  TROUBLESHOOTING.md
multi-agent-factory/docs/testing/: acceptance-criteria.md
multi-agent-factory/helm/maf/: Chart.yaml  values.yaml
multi-agent-factory/helm/maf/templates/: service.yaml
multi-agent-factory/infra/docker/: README.md  agent-entrypoint.sh  docker-compose.agents.yml  docker-compose.yml
multi-agent-factory/infra/docker/alertmanager/: alertmanager.yml
multi-agent-factory/infra/docker/grafana/dashboards/: resource-governance.json  system-overview.json
multi-agent-factory/infra/docker/migrations/: search_helpers.sql
multi-agent-factory/infra/docker/nginx/: nginx.conf
multi-agent-factory/infra/docker/prometheus/: alerts.yml
multi-agent-factory/infra/k8s/: 01-secrets.yaml  02-storage.yaml  03-database.yaml  04-redis.yaml  09-monitoring.yaml  10-autoscaling.yaml  13-security.yaml  README.md  deploy.sh
multi-agent-factory/infra/terraform/: variables.tf
multi-agent-factory/llm/: openai_helpers_starter.py
multi-agent-factory/maf-chart-skeleton/: README.md
multi-agent-factory/maf-chart-skeleton/apps/: maf.yaml
multi-agent-factory/maf-chart-skeleton/charts/maf/: Chart.yaml  values-hybrid.yaml  values-saas.yaml
multi-agent-factory/maf-chart-skeleton/charts/maf/templates/: configmap-router.yaml  deployment-otel-collector.yaml  deployment-ray.yaml  networkpolicy-default-deny.yaml  prometheusrule-costs.yaml  service-otel.yaml  serviceaccount-vault.yaml  servicemonitor-api.yaml  statefulset-minio.yaml
multi-agent-factory/orchestrator/: __init__.py  nats_orchestrator.py  publish.py  requirements.txt  temporal_client.py  worker.py
multi-agent-factory/orchestrator/workflows/: router.py
multi-agent-factory/rfcs/: Layer_2-Experiments.md
multi-agent-factory/scripts/: backlog_manager.py  security_audit.py  security_scanner.py  security_updates.sh  validate_config.py
multi-agent-factory/security/: access_control.py  data_protection.py  enhanced_monitoring.py  hardening_config.py  incident_response.py
multi-agent-factory/tests/: common_tests.txt  test_sanity.py
multi-agent-factory/tests/acceptance/features/: task_management.feature
multi-agent-factory/tests/acceptance/step_definitions/: test_task_management.py
multi-agent-factory/tests/security/: test_auth_security.py
multi-agent-factory/tests/system/: test_multi_agent_scenarios.py
multi-agent-factory/tests/unit/: test_api_auth.py
(+264 files in other folders)
