[project]
name = "multi-agent-factory"
version = "0.1.0"
description = "Production rails and tooling for Multi-Agent Factory"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Multi-Agent Factory Team" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent"
]

# --- Runtime deps (consolidated & aligned) ---
dependencies = [
  # Web/API
  "fastapi>=0.104.1",
  "uvicorn[standard]>=0.24.0",

  # Core typing/config
  "pydantic>=2.11.7",
  "pydantic-settings>=2.1.0",
  "PyYAML>=6.0.1",
  "python-dateutil>=2.8.2",

  # DB/cache/bus
  "psycopg[binary]>=3.2.9",
  "redis>=6.4.0",
  "nats-py>=2.11.0",
  "temporalio>=1.4.0",

  # LLM clients (keep light; router can swap providers)
  "openai>=1.3.0",
  "anthropic>=0.8.1",
  "google-generativeai>=0.3.2",

  # Auth/security
  "PyJWT>=2.8.0",
  "passlib[bcrypt]>=1.7.4",

  # Observability (aligned to 1.27 core + 0.48b0 instrumentations)
  "prometheus-client>=0.19.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp>=1.27.0",
  "opentelemetry-instrumentation>=0.48b0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-psycopg>=0.48b0",
  "opentelemetry-instrumentation-redis>=0.48b0",
]

[project.optional-dependencies]
# Dev toolbox (format/lint/type, security scan, docs, load tests)
dev = [
  "black>=24.4.2",
  "ruff>=0.6.9",
  "mypy>=1.12.0",
  "pre-commit>=3.6.0",
  "bandit>=1.7.5",
  "safety>=3.0.1",
  "yamllint>=1.35.1",
  "mkdocs>=1.5.3",
  "mkdocs-material>=9.5.3",
]

# Test toolbox (isolated so CI can choose `[dev,test]`)
test = [
  "pytest>=7.4.3",
  "pytest-asyncio>=0.21.1",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.5.0",
  "pytest-mock>=3.12.0",
  "httpx>=0.26.0",
  "factory-boy>=3.3.0",
  "faker>=22.0.0",
  "types-requests>=2.31.0.20240125",
  "types-PyYAML>=6.0.12.12",
  "types-redis>=4.6.0.20240106",
  "locust>=2.20.0",
]

# Optional: split observability into an extra if you want slim installs
otel = [
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp>=1.27.0",
  "opentelemetry-instrumentation>=0.48b0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-psycopg>=0.48b0",
  "opentelemetry-instrumentation-redis>=0.48b0",
]

[project.urls]
Homepage = "https://example.com"
Source = "https://github.com/your-org/multi-agent-factory"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# --- Tooling ---

[tool.uv]
# Install these groups by default when using uv workspaces/install
default-groups = ["dev"]

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "B", "I", "C4", "UP", "ASYNC", "S"]
ignore = ["E501"]  # managed by Black
exclude = ["docs", "build", "dist", ".venv"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = []

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings --tb=short"
testpaths = ["tests"]
xfail_strict = true
asyncio_mode = "auto"
minversion = "7.0"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "system: marks tests as system tests",
    "critical: marks tests as critical path tests",
    "edge_case: marks tests as edge case tests",
    "regression: marks tests as regression tests",
    "security: marks tests as security-related tests",
]
# Optimize test execution
junit_family = "xunit2"
log_cli = false
log_level = "WARNING"

[tool.coverage.run]
branch = true
source = ["multi_agent_factory"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
